	* libnautilus/nautilus-view.c: (forget_cached_view_frame):
	* src/nautilus-component-adapter-factory.c: (release_factory):
	* src/nautilus-view-frame.c: (destroy_view):
	Clean up code by not bothering with an ev for CORBA_Object_release
	and CORBA_Object_duplicate.

	* src/nautilus-shell-ui.xml: Remove "Feedback" menu item.

2002-03-08  Michael Meeks  <michael@ximian.com>

	* src/nautilus-main.c (main): do a bonobo_ui_init,
	we shouldn't need it but libgnomeui has escaped from
	doing this for some reason.
	Remove eel_setenv DISPLAY chicanery

	* libnautilus/nautilus-view-standard-main.c
	(nautilus_view_standard_main_multi): remove double
	bonobo_ui_init.

2002-03-07  Darin Adler  <darin@bentspoon.com>

	* components/tree/nautilus-tree-model.h:
	* components/tree/nautilus-tree-model.c:
	(stop_monitoring_directory_without_reporting): Rename old
	stop_monitoring_directory function.
	(stop_monitoring_directory): New function that handles changes
	caused by stopping monitoring.
	(destroy_children_by_function): New.
	(destroy_by_function): New.
	(should_show_file): New.
	(update_node): Call should_show_file instead of
	nautilus_file_is_gone to decide whether a given file should show
	up.
	(process_file_change): Ditto.
	(start_monitoring_directory): Pass through flags for whether to
	monitor invisible or backup files, rather than just TRUE, TRUE.
	(nautilus_tree_model_get_value): Use PANGO_STYLE_ITALIC instead of
	PANGO_STYLE_OBLIQUE. Both will fall back to the other if not
	available, but if we have both, we'd prefer italic.
	(stop_monitoring_directory_and_children): New.
	(stop_monitoring): New.
	(nautilus_tree_model_set_show_hidden_files): New.
	(nautilus_tree_model_set_show_backup_files): New.
	(file_is_not_directory): New.
	(nautilus_tree_model_set_show_only_directories): New.

	* components/tree/nautilus-tree-view.c:
	(update_filtering_from_preferences): Call functions to change
	settings on model rather than storing these settings here.
	(tree_activate_callback),