@@ -37,6 +37,12 @@
 
 2002-03-08  Michael Meeks  <michael@ximian.com>
 
+	* libnautilus/nautilus-clipboard.c
+	(select_all_callback): a GSource is not a
+	GObject, #73782.
+
+2002-03-08  Michael Meeks  <michael@ximian.com>
+
 	* src/nautilus-main.c (main): do a bonobo_ui_init,
 	we shouldn't need it but libgnomeui has escaped from
 	doing this for some reason.
